--- a/assets/scss/widgets/_home-section.scss
+++ b/assets/scss/widgets/_home-section.scss
@@ -74,8 +74,10 @@
 }
 
 .card-home {
-  @include flex(column);
   min-height: 30rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
   position: relative;
   background: $gradient-linear-silver;
   border: 0.25rem solid silver;
@@ -143,7 +145,6 @@
   &__info {
     @include flex(column);
     gap: 0.25rem;
-    height: 5.75rem;
     padding: 0.75rem 1rem;
     border-bottom-left-radius: 0.75rem;
     border-bottom-right-radius: 0.75rem;
